# qugenai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE.md  README.md  app.py  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml  tests.py
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
qugenai/: conftest.py
qugenai/apps/ai/: apps.py  forms.py  urls.py  views.py
qugenai/apps/ai/tests/: test_urls.py  test_views.py
qugenai/apps/users/: adapters.py  apps.py  models.py  views.py
qugenai/apps/users/api/: serializers.py  views.py
qugenai/apps/users/migrations/: 0001_initial.py
qugenai/apps/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
qugenai/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
qugenai/templates/: base.html
qugenai/templates/ai/: qgenform.html
qugenai/templates/icons/svg/: github.html
qugenai/templates/pages/: home.html
requirements/: base.txt  local.txt  production.txt
templates/: base.html  home.html
